@@ -37,6 +37,7 @@
     <Compile Include="NSNumber.cs" />
     <Compile Include="NSString.cs" />
     <Compile Include="NSSet.cs" />
+    <Compile Include="UID.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
